<resources>
    <string name="app_name">youtubefirebase</string>
    <string name="title">Motorbike Tracking</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register account</string>
    <string name="forgot">Forgot password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_find_friends">FindFriends</string>
    <string name="search_for_friend">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_start_ride">StartRide</string>
    <string name="start_ride">Start Ride</string>
</resources>